turtleart.star.Star.scala.error
Compilation error:
Star:2: error: value gauche is not a member of Unit
  avance(50);droite(72);avance(50)gauche(144)}
                                  ^